# evie

./: Makefile.in  README  config.h.in  configure  configure.ac
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
examples/: output.txt
src/: Makefile.am  Makefile.in  animal.cpp  animal.h  anitest.cpp  clone.h  command.cpp  command.h  conf.h  graphics.cpp  graphics.h  ioz.cpp  ioz.h  keypress.cpp  keypress.h  main.cpp  meme.cpp  meme.h  mini_window.cpp  mini_window.h  neurone.cpp  neurone.h  settings.cpp  settings.h  settings.xml  stat.cpp  stat.h  test.cpp  tile.cpp  tile.h  world.cpp  world.h
