bin_PROGRAMS = evie anitest

COMMON_FILES = \
	neurone.h	\
	neurone.cpp	\
	animal.h	\
	animal.cpp	\
	tile.h		\
	tile.cpp	\
	world.h		\
	world.cpp	\
	stat.h		\
	stat.cpp	\
	graphics.h	\
	graphics.cpp	\
	clone.h		\
	ioz.h		\
	ioz.cpp	

evie_SOURCES = $(COMMON_FILES)	\
	main.cpp	\
	command.h	\
	command.cpp	\
	keypress.h	\
	keypress.cpp	\
	meme.h		\
	meme.cpp	\
	mini_window.h	\
	mini_window.cpp


anitest_SOURCES = $(COMMON_FILES)	\
	anitest.cpp
